--- a/conf/ext/vm.html
+++ b/conf/ext/vm.html
@@ -571,7 +571,7 @@ FreeBSD	10.2			 Oct 27, 2015			  FreeBSD 10.2
 <HR>
 <ADDRESS>
 Man(1) output converted with
-<a href="http://www.oac.uci.edu/indiv/ehood/man2html.html">man2html</a>
+<a href="https://www.freshports.org/textproc/man2html/" target="_blank">man2html</a>
 </ADDRESS>
 </BODY>
 </HTML>
